tests/expectations/compiler/structs/struct_with_visibility_fail.out
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:2:5
     |
   2 |     constant a: u8,
     |     ^^^^^^^^^^^^^^
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:3:5
     |
   3 |     private bar: bool,
     |     ^^^^^^^^^^^^^^^^^
Error [ETYC0372060]: A struct cannot have a member with mode `constant`, `private`, or `public`.
    --> compiler-test:4:5
     |
   4 |     public bax: u16,
     |     ^^^^^^^^^^^^^^^
